--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ datasources.default.url=jdbc\:h2\:mem\:devDb;LOCK_TIMEOUT\=10000;DB_CLOSE_ON_EXI
 jpa.default.properties.hibernate.hbm2ddl.auto=update
 datasources.default.username=sa
 datasources.default.driver-class-name=org.h2.Driver
+
+micronaut.http.services.mock.url=https://run.mocky.io/v3
+
